--- a/blogstyles.css
+++ b/blogstyles.css
@@ -13,18 +13,156 @@
     color: var(--FCOLOR);
 }
 
+.topad1{
+    padding-top: 25vh;
+    padding-bottom: 5vh;
+    width: 70%;
+    margin-inline: auto;
+}
+
+
+.inside{
+    background-image: url(poster1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 20vh;
+    border-radius: 10px;
+}
+
+.inside div{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: var(--BG-COLOR);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: bolder;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 3px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+
+.contain1{
+   padding-top: 18vh;
+   width: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+
+.contain1 img{
+    margin: 1vw;
+    width: 45vw;
+    min-width: 200px;
+    max-width: 400px;
+    border-radius: 5px;
+}
+
 .bloglogo{
+    height: 20vh;
     display: flex;
     width: 100%;
     padding: 10px;
     position: fixed;
+    z-index: 1000;
     box-shadow: .1px .1px 5px .5px var(--FCOLOR);
 }
 
-.bloglogo> img{
-    height: 50px;
+.left{
+    width: 20%;
+    height: 70%;
+    margin-block: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.left img{
+    min-width: 250px;
+    width: 80%;
+    max-width: 350px;
+    height: 90%;
+}
+
+.right{
+    width: 80%;
+    height: 100%;
+}
+
+.top{
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.top a{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.top a:hover img{
+    transform: scale(1.2);
+    transition: all 1s ease;
+}
+
+.top img{
+    width: 5vw;
+    height: 80%;
+}
+
+.top1{
+    display: flex;
+    gap: 5px;
+}
+
+.more{
+    display: flex;
+    padding: 10px 0;
+    flex-direction: column;
+    font-size: 12px;
+    font-weight: bolder;
+    border-radius: 10px;
+}
+
+.more:hover{
+    transform: scale(1.3);
+    transition: all .5s ease-in-out;
+}
+
+.bottom{
+    height: 50%;
+    display: flex;
+    align-items: center;
+    gap: 3vw;
+    justify-content: center;
+    background-color: var(--FCOLOR);
+    border-radius: 10px;
+}
+
+.bottom a{
+    font-size: 14px;
+    font-weight: bold;
+    background-color: var(--FCOLOR);
+    color: #fff;
+    height: 100%;
+    width: 5vw;
+    display: grid;
+    align-items: center;
+    margin-block: 3px;
+    text-align: center;
+}
+
+.bottom a:hover{
+    border-bottom: 4px solid var(--BG-COLOR);
+    transition: all .2s ease;
+}
 
 .bloghead{
     display: flex;
@@ -36,18 +174,218 @@
     color: var(--FCOLOR);
     font-size: 36px;
     letter-spacing: 0.02em;
-    margin-top: 15vh;
 }
 
 .blogbody{
     width: 80%;
     display: block;
     padding-top: 50px;
-    padding-bottom: 50px;
 }
+
 .blogbody p{
     margin-inline: 10vh;
     width: 100%;
+}
+
+.things{
+    width: 95%;
+    display: flex; 
+    margin-inline: auto;
+    margin-bottom: 5vh;
+}
+
+.things1{
+    width: 20%;
+    padding-inline: 5px;
+}
+
+.things #heading{
+    height: 100px;
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+}
+
+#nink{
+    display: inline-block;
+    font-size: 24px;
+    animation: slideInText 1s ease-in-out forwards;
+  }
+
+  @keyframes slideInText {
+    from {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+#heading{
+    background-color: var(--BG-COLOR);
+}
+
+#heading a{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: var(--BG-COLOR);
+}
+
+.things1 div a{
+     border-radius: 8px;
+}
+
+.things1 div:hover{
+    transform: scale(1.2);
+    transition: all 1s ease;
+}
+
+.things1 div{
+    height: 7vh;
+    margin-block: 5px;
+    border: 1px solid var(--BG-COLOR);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.things2{
+    width: 80%;
+}
+
+.things2-1{
+    width: 100%;
+    height: 90%;
+    display: flex;
+}
+
+.things2-1-1{
+    width: 65%;
+    height: 100%;
+    padding: 10px;
+}
+
+.things2-1-1:hover img {
+    transform: scale(1.1);
+    transition: all 1s ease;
+}
+
+.things2-1-2{
+    width: 35%;
+    height: 100%;
+    padding: 10px 10px 10px 0
+}
+
+.things2-1-2-1{
+    width: 100%;
+    height: 50%;
+}
+
+.things2-1-2-1 > a{
+    width: 100%;
+    height: 100%;
+}
+
+.things2-1-2-1 > a:hover{
+    text-decoration: underline;
+}
+
+.things2-1-2-1 img:hover{
+    transform: scale(1.2);
+    transition: all 1s ease;
+}
+
+.ghoul1{
+    height: 70%;
+    width: 100% ;
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+}
+
+.ghoul1 img{
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.ghoul2{
+    height: 30%;
+    width: 100%;
+}
+
+.inner{
+    padding-left: 5px;
+    width: 33%;
+    height: 100%;
+    max-height: 70px;
+    border-left: 2px solid var(--FCOLOR);
+    background-color: var(--BG-COLOR);
+}
+
+.inner a{
+    color: #fff;
+    background-color: var(--BG-COLOR);
+    color: var(--FCOLOR);
+}
+
+.inner > a:hover{
+    text-decoration: underline;
+    font-weight: 700;
+} 
+
+.inner > a > i{
+    font-size: 20px;
+    background-color: var(--BG-COLOR);
+}
+
+.link-x{
+    width: 100%;
+    height: 100%;
+}
+
+.link-x:hover{
+    text-decoration: underline;
+}
+
+.link-x-1{
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+    transition: transform 0.8s ease-in-out;
+    border-radius: 10px 10px 0 0;
+}
+
+.link-x-1 > img{
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+    height: 100%;
+}
+
+.link-x-1 > img:hover{
+    transform: scale(1.1);
+}
+
+.link-x-2 > p:first-child{
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.link-x-2 > p:nth-child(2){
+    text-overflow: ellipsis;
+}
+
+
+.things2-2{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--BG-COLOR);
 }
 
 .links{
@@ -101,20 +439,178 @@
     color: purple;
 }
 
+.container1{
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    height: 60vh;
+    min-height: 300px;
+    background-color: var(--FCOLOR);
+    margin-block: 10px;
+    margin: 5vh 4.5vw;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.tab1{
+    height: 85%;
+    display: flex;
+    gap: 1vw;
+    background-color: var(--FCOLOR);
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+    scroll-behavior: smooth;
+}
+
+.tab1 a{
+    height: 100%;
+    width: 40vw;
+    min-width: 250px;
+    border: 10px;
+    background-color: var(--FCOLOR);
+    border: 1px solid var(--BG-COLOR);
+    border-radius: 10px;
+}
+
+.tab1 a:hover div:nth-child(2){
+    text-decoration: underline;
+}
+
+.tab1 a:hover div:first-child img{
+    transform: scale(1.3);
+    transition: all 1s ease;
+}
+
+.tab1 a div:first-child{
+    width: 100%;
+    height: 80%;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+}
+
+.tab1 a div:first-child img{
+    width: 100%;
+    height: 100%;
+}
+
+ .tab1 a div:nth-child(2){
+    height: 20%;
+    border-radius: 0 0 10px 10px;
+    background-color: var(--FCOLOR);
+    color: var(--BG-COLOR);
+    padding: 5px;
+ }
+
+.tab2{
+    height: 15%;
+    background-color: var(--FCOLOR);
+    display: flex;
+    justify-content: flex-end;
+}
+
+ .tab2 i{
+    font-size: 200%;
+    margin: 5px;
+    color: var(--BG-COLOR);
+    background-color: var(--FCOLOR);
+ }
+
 a{
     text-decoration: none;
     color:rgb(14, 10, 12);
     color: var(--FCOLOR);
 }
 
-.footer{
-    margin: 10vh 0;
-}
-
 .footer > p{
     color: rgb(119, 119, 119);
     text-align: center;
 }
+
+footer{
+    background-color: var(--FCOLOR);
+    padding: 10px;
+    padding-bottom: 10vh;
+}
+
+footer p{
+    background-color: var(--FCOLOR);
+    color: #fff;
+    font-weight: bolder;
+}
+
+footer div{
+    background-color: var(--FCOLOR);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3vh;
+}
+
+footer i{
+    font-size: larger;
+    background-color: var(--FCOLOR);
+    color: #fff;
+}
+
+footer div a {
+    font-size: 20px;
+    background-color: var(--FCOLOR);
+}
+
+footer div a:hover .xeros{
+    text-decoration: underline;
+}
+
+.xeros{
+    background-color: var(--FCOLOR);
+    color: #fff;
+    font-weight: 200;
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+#down{
+    font-weight: unset;
+    margin-block: 3vh;
+}
+
+#down a{
+    background-color: var(--FCOLOR);
+    color: white;
+    font-weight: bolder;
+}
+
+#down a:hover{
+    text-decoration: underline;
+}
+
+
+
+/* Scrollbar Track */
+.container1::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Scrollbar Handle */
+  .container1::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 3px;
+  }
+  
+  /* Hover effect on scrollbar handle */
+  .container1::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
+  /* Track background */
+  .container1::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Add shadows to scrollbar track */
+  .container1::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+  
 
 
 
@@ -136,5 +632,15 @@ a{
 @media screen and (max-width: 450px) {
     .blogbody > p{
         margin-inline: 5vw;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .blogbody > p{
+        margin-inline: 5vw;
+    }
+
+    .contain1 img{
+        width: 100%
     }
 }
