--- a/blogstyles.css
+++ b/blogstyles.css
@@ -13,6 +13,15 @@
     color: var(--FCOLOR);
 }
 
+#eautos{
+    white-space: nowrap;
+    word-wrap: nowrap;
+}
+
+.link-x-2 p:nth-child(2){
+    text-overflow: hidden;
+}
+
 .topad1{
     padding-top: 25vh;
     padding-bottom: 5vh;
@@ -79,14 +88,11 @@
     height: 70%;
     margin-block: auto;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 .left img{
-    min-width: 250px;
-    width: 80%;
-    max-width: 350px;
+    width: 100%;
     height: 90%;
 }
 
@@ -122,18 +128,31 @@
     gap: 5px;
 }
 
+.top2{
+    height: min-content;
+    border-radius: 10px;
+  }
+  
+
 .more{
     display: flex;
-    padding: 10px 0;
     flex-direction: column;
     font-size: 12px;
     font-weight: bolder;
+    height: 100%;
+    max-height: 5vh;
     border-radius: 10px;
 }
 
 .more:hover{
     transform: scale(1.3);
     transition: all .5s ease-in-out;
+    font-size: smaller;
+}
+
+.more span{
+    word-wrap: none;
+    white-space: nowrap;
 }
 
 .bottom{
@@ -188,6 +207,7 @@
 }
 
 .things{
+    height: fit-content;
     width: 95%;
     display: flex; 
     margin-inline: auto;
@@ -197,6 +217,9 @@
 .things1{
     width: 20%;
     padding-inline: 5px;
+    overflow-y: auto;
+    height: 100%;
+    min-height: 5vh;
 }
 
 .things #heading{
@@ -210,6 +233,8 @@
     display: inline-block;
     font-size: 24px;
     animation: slideInText 1s ease-in-out forwards;
+    min-width: 100px;
+    text-align: center;
   }
 
   @keyframes slideInText {
@@ -275,11 +300,17 @@
 .things2-1-2{
     width: 35%;
     height: 100%;
-    padding: 10px 10px 10px 0
+    padding: 10px 10px 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    row-gap: 2vh;
 }
 
 .things2-1-2-1{
     width: 100%;
+    max-height: 60vh;
+    min-height: 40vh;
     height: 50%;
 }
 
@@ -315,21 +346,37 @@
 .ghoul2{
     height: 30%;
     width: 100%;
+    overflow: hidden;
+}
+
+.ghoul2 p{
+    text-overflow: ellipsis;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 2; /* Number of lines to show */
 }
 
 .inner{
     padding-left: 5px;
     width: 33%;
     height: 100%;
-    max-height: 70px;
     border-left: 2px solid var(--FCOLOR);
     background-color: var(--BG-COLOR);
+    max-height: 15vh;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 2; /* Number of lines to show */
 }
 
 .inner a{
     color: #fff;
     background-color: var(--BG-COLOR);
     color: var(--FCOLOR);
+    height: 100%;
+    text-overflow: ellipsis;
 }
 
 .inner > a:hover{
@@ -381,11 +428,13 @@
 
 .things2-2{
     height: 10%;
+    min-height: 100px;
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: var(--BG-COLOR);
+    border-radius: 10px;
 }
 
 .links{
@@ -610,6 +659,88 @@ footer div a:hover .xeros{
   .container1::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   }
+
+
+  .show{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 100%;
+    width: 30%;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1002;
+}
+
+.show1{
+    margin-right: 5px;
+    width: 5vw;
+    min-width: 40px;
+    text-align: center;
+    position: relative;
+}
+
+.show1 > i{
+    color: var(--FCOLOR);
+    font-size: 30px;
+    width: 100%;
+    border: none;
+}
+
+#showlist{
+    margin-inline: auto;
+    position: fixed;
+    right: 1vw;
+    z-index: 1001;
+    top: 18vh;
+    display: flex;
+    width: 97%;
+    overflow-y: auto;
+    display: none;
+    overflow-y: auto;
+    height: 82vh;
+}
+
+.showlist1{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+.showlist1 > a{
+    display: flex;
+    height: 10vh;
+    align-items: center;
+    border: 1px solid var(--FCOLOR);
+    margin: 1px;
+}
+
+.showlist1 img{
+    display: block;
+}
+
+.showlist1 > a > img{
+    width: 40px;
+}
+
+.showlist2{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    border: 1px solid blue;
+    background-color: var(--FCOLOR);
+}
+
+.showlist2 a{
+    height: 10vh;
+    border: 1px solid var(--BG-COLOR);
+    display: grid;
+    align-items: center;
+    padding-left: 5px;
+    background-color: var(--FCOLOR);
+    color: #fff;
+    margin: 2px;
+}
   
 
 
@@ -641,6 +772,170 @@ footer div a:hover .xeros{
     }
 
     .contain1 img{
-        width: 100%
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .showlist1{
+        width: 40%;
+    }
+
+    .showlist1{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .things2-1{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .things2-1-1{
+        width: 100%;
+    }
+
+    .things2-1-2{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        display: flex;
+        gap: 1vw;
+        justify-content: center;
+    }
+
+    .things2-1-2-1{
+        width: 48%;
+    }
+
+}
+
+@media screen and (max-width: 700px){
+    .left img{
+        min-width: 200px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .show{
+        display: none;
+    }
+
+    .left img{
+        height: 60px;
+    }
+
+    #showlist{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+    .right{
+        display: none;
+    }
+    
+    .left{
+        width: 30%;
+        display: flex;
+        height: 100%;
+    }
+    
+    .left img{
+        width: 20vw;
+    }
+
+    .bloglogo{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #inside-text{
+        font-size: 20px;
+    }
+}
+
+
+@media screen and (max-width: 950px) {
+    .things{
+        flex-direction: column;
+        height: fit-content;
+    }
+    .things1{
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+        margin-bottom: 3vh;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .things1 div{
+        box-shadow: .1px .1px 5px .1px var(--BG-COLOR);
+    }
+    #nink{
+        width: 10vw;
+    }
+    .things2{
+        width: 100%;
+    }
+
+    .things2-1-1{
+        height: 100%;
+    }
+
+    .top2 .more{
+        font-size: 12px;
+    }
+
+}
+
+@media screen and (min-height: 980px) {
+    .top2{
+       padding-top: 10px;
+        
+    }
+}
+
+@media screen and (max-width: 980px) {
+    .things1 div{
+        height: fit-content;
+        padding: 5px;
+        text-align: center;
+    }
+
+    .top2{
+        font-size: 12px;
+        
+    }
+
+    .left img{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .things1 div a{
+        font-size: 12px;
+    }
+
+    .things2-1-2-1:nth-child(3){
+        display: block;
+    }
+
+    .things2-1-2-1{
+        height: 33.3%;
+    }
+
+    .things2-1-2{
+        display: flex;
+    }
+}
+
+@media screen and (min-width: 1150px){
+    .things1 div a{
+       font-size: 12px;
     }
 }
