--- a/blogstyles.css
+++ b/blogstyles.css
@@ -360,6 +360,7 @@
 
 .inner{
     padding-left: 5px;
+    padding-block: auto;
     width: 33%;
     height: 100%;
     border-left: 2px solid var(--FCOLOR);
@@ -435,6 +436,7 @@
     align-items: center;
     background-color: var(--BG-COLOR);
     border-radius: 10px;
+    padding-inline: 5px;
 }
 
 .links{
@@ -447,6 +449,15 @@
     padding: 3vh 5%;
     box-shadow: .1px .1px 5px .1px var(--FCOLOR);
     border-radius: 5px;
+}
+
+.links:hover .link1 img{
+    transform: scale(1.4);
+    transition: all 2s ease;
+}
+
+.links:hover .link2{
+    text-decoration: underline;
 }
 
 .link1{
@@ -462,6 +473,8 @@
 .link1 a{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .link1 > a > img{
@@ -519,6 +532,12 @@
     background-color: var(--FCOLOR);
     border: 1px solid var(--BG-COLOR);
     border-radius: 10px;
+    font-size: 14px;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: ellipsis;
+    -webkit-line-clamp: 2; /* Number of lines to show */
 }
 
 .tab1 a:hover div:nth-child(2){
@@ -783,6 +802,15 @@ footer div a:hover .xeros{
 
     .showlist1{
         width: 60%;
+    }
+
+    .topad1{
+        width: 95%;
+    }
+
+    #clickshow > i{
+        font-size: 20px;
+        font-weight: bolder;
     }
 }
 
