--- a/partsblogstyles.css
+++ b/partsblogstyles.css
@@ -153,7 +153,7 @@ i{
 }
 
 p > img{
-    width: 400px;
+    width: 300px;
     border-radius: 10px;
     margin: 10px 0 5vh 0;
 }
@@ -164,6 +164,9 @@ p > img{
     margin-bottom: 3vh;
 }
 
+#sensor{
+    width: 200px;
+}
 
 #vin1{
     width: 400px;
